--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+html {
+  overflow: -moz-scrollbars-vertical;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+}
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+  /* transition: all ease-in-out 250ms;  */
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +19,31 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0% 5%;
+  color: white;
+  background-color: rgb(11, 11, 58);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h4{
+  font-size: 1rem;
+  /* color: rgb(56,56,56); */
+}
+h3{
+  font-size: 1.5rem;
+  /* color: rgb(56,56,56); */
+  line-height: 2.5rem;
+  margin: 2rem 0rem;
+}
+a{
+  color: white;
+}
+button{
+  cursor: pointer;
+  /* background-color: rgb(70, 21, 150);
+  color: white; */
 }
